# engine

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml  pypi.yml  python-syntax.yml
docs/: README.md  __main__.py  requirements.txt  scripts.py
pyxora/: __init__.py  __main__.py  assets.py  display.py  scene.py
pyxora/examples/test/: __main__.py  main.py
pyxora/examples/test/scenes/: test.py
pyxora/utils/: engine.py  platform.py  python.py
pyxora/wrapper/: __init__.py  image.py  others.py  shapes.py  text.py
src/: __init__.py  __main__.py  assets.py  display.py  scene.py
src/docs/: build.py  local.py
src/examples/: __init__.py  __main__.py
src/examples/test/: __init__.py  __main__.py  main.py
src/examples/test/scenes/: test.py
src/project/: __init__.py  build.py  delete.py  info.py  list.py  new.py  open.py  rename.py  run.py
src/utils/: __init__.py  engine.py
src/wrapper/: __init__.py  others.py  shapes.py
