[project]
name = "pyxora"
version = "0.3.0"
authors = [{ name = "ToniDevStuff", email = "antonisdevstuff@gmail.com" }]
description = "A simple game engine made with Python and pygame-ce"
keywords = ["engine", "game engine", "game development"]
readme = "README.md"
dynamic = ["dependencies"]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENCE.txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft:: Windows",
    "Operating System :: POSIX:: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: pygame",
]

[project.urls]
Homepage = "https://tonidevstuff.github.io/pyxora"
Documentation = "https://tonidevstuff.github.io/pyxora/docs"
Repository = "https://github.com/ToniDevStuff/pyxora"
Issues = "https://github.com/ToniDevStuff/pyxora/issues"
Releases = "https://github.com/ToniDevStuff/pyxora/releases"

[project.scripts]
pyxora = "pyxora.__main__:main"

[tool.setuptools]
package-dir = { "pyxora" = "src" }
packages = ["pyxora"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
