[project]
name = "pyxora"
version = "0.3.0"
authors = [{ name = "ToniDevStuff", email = "antonisdevstuff@gmail.com" }]
description = "A game engine library using pygame, pymunk, and more "
keywords = ["engine", "game engine", "game development"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce==2.5.5",
    "pdoc==15.0.3",
    "cx_Freeze==8.3.0",
    "pygbag==0.9.2"
]
license = "MIT"
license-files = ["LICENCE.txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft:: Windows",
    "Operating System :: POSIX:: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: pygame",
]
[project.urls]
Homepage = "https://tonidevstuff.github.io/pyxora"
Documentation = "https://tonidevstuff.github.io/pyxora/docs"
Repository = "https://github.com/ToniDevStuff/pyxora"
Issues = "https://github.com/ToniDevStuff/pyxora/issues"
Releases = "https://github.com/ToniDevStuff/pyxora/releases"

[project.scripts]
pyxora = "pyxora.__main__:main"

[tool.setuptools]
package-dir = { "pyxora" = "src" }
packages = [
    "pyxora",
    "pyxora.wrapper",
    "pyxora.utils",
    "pyxora.docs",
    "pyxora.data",
    "pyxora.examples",
    "pyxora.project",
]

[tool.setuptools.package-data]
pyxora = ["data/**/*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
